--- a/NativoPlusStudio.RequestResponsePattern/NativoPlusStudio.RequestResponsePattern.csproj
+++ b/NativoPlusStudio.RequestResponsePattern/NativoPlusStudio.RequestResponsePattern.csproj
@@ -1,17 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>This is an opinionated approach that NativoPlus Studio handles request response pattern</Description>
+    <Version>1.0.1</Version>
+    <PackageProjectUrl>https://github.com/nativoplus/NativoPlusStudio.RequestResponsePattern</PackageProjectUrl>
+    <PackageTags>API request response pattern</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="8.0.100" />
-    <PackageReference Include="MediatR" Version="5.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.1.3" />
-    <PackageReference Include="Serilog" Version="2.7.1" />
+    <PackageReference Include="FluentValidation" Version="8.6.2" />
+    <PackageReference Include="MediatR" Version="8.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
 
